[package]
name = "vnc_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
enigo = { version = "0.6.1", features = ["tokio"] }
num_enum = "0.7.6"
scrap = "0.5.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
xkeysym = "0.2.1"
