[package]
name = "vnc_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
des = "0.9.0"
enigo = { version = "0.6.1", features = ["tokio"] }
flate2 = "1.1.9"
num_enum = "0.7.6"
rand = "0.10.1"
rfb-encodings = { version = "0.1.7", optional = true}
scrap = "0.5.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
xkeysym = "0.2.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[features]
default = []
encoding_zrle = ["dep:rfb-encodings"]
encoding_tight = ["dep:rfb-encodings"]
