[package]
name = "vnc_server"
version = "0.1.0"
edition = "2024"

default-run = "vnc_server"

[dependencies]
anyhow = "1.0.102"
bytes = "1.12.0"
des = "0.9.0"
enigo = { version = "0.6.1", features = ["tokio"] }
flate2 = "1.1.9"
num-prime = {version = "0.5.0", optional = true}
num_enum = "0.7.6"
pam-client = { version = "0.5.0", default-features = false , optional = true}
png = "0.18.1"
rand = "0.10.1"
rfb-encodings = { version = "0.1.7", optional = true}
ron = "0.12.2"
scrap = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["serde", "v7"] }
uzers = {version = "0.12.2", optional = true}
xkeysym = "0.2.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[features]
default = [
    "management",
    "encoding_zrle",
    "encoding_tight",
    "auth_provider_file",
    "auth_provider_pam",
    "auth_method_mslogonii"
    ]
encoding_zrle = ["dep:rfb-encodings"]
encoding_tight = ["dep:rfb-encodings"]
auth_provider_file = []
auth_provider_pam = ["dep:uzers", "dep:pam-client"]
auth_method_mslogonii = ["dep:num-prime"]
management = []
